ingress/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0
        ports:
        - containerPort: 80
