ingress/deploy-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-deploy
  labels:
    app: email
spec:
  replicas: 3
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0
        ports:
        - containerPort: 80
