ingress/email-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: service-email
        labels:
                app: service
spec:
        selector:
                app: email
        ports:
        - protocol: TCP
          port: 81 #service port
          targetPort: 80 #container port
